[gd_scene load_steps=8 format=2]

[ext_resource path="res://Player/PlayerSprite.tscn" type="PackedScene" id=1]
[ext_resource path="res://Player/Player.gd" type="Script" id=2]
[ext_resource path="res://Player/PlayerFallLimit.gd" type="Script" id=3]
[ext_resource path="res://Assets/SFX/pain.ogg" type="AudioStream" id=4]
[ext_resource path="res://Assets/SFX/jump1.ogg" type="AudioStream" id=5]
[ext_resource path="res://Assets/SFX/coin_SFX.wav" type="AudioStream" id=6]

[sub_resource type="CapsuleShape2D" id=1]
radius = 58.0
height = 80.0

[node name="Player" type="KinematicBody2D"]
position = Vector2( 505, 286 )
collision_mask = 2
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 2 )
shape = SubResource( 1 )

[node name="PlayerSprite" parent="." instance=ExtResource( 1 )]

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 0, 1 )
current = true
zoom = Vector2( 4, 4 )
smoothing_enabled = true

[node name="PlayerFallLimit" type="Node" parent="."]
script = ExtResource( 3 )

[node name="HurtSoundEffect" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[node name="JumpSoundEffect" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[node name="CollectCoinSoundEffect" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )

[connection signal="animate" from="." to="PlayerSprite" method="_on_Player_animate"]
[connection signal="falling" from="." to="PlayerFallLimit" method="_on_Player_falling"]
